login page completed

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-*,
+/* *,
 *:before,
 *:after {
     box-sizing: border-box;
-}
+} */
 
 body {
     font-family: "Roboto", sans-serif;
@@ -19,6 +19,7 @@ body,
     width: 100%;
     margin: 0;
     padding: 0;
+    overflow: auto;
 }
 
 h1,
