--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,12 @@ body,
     overflow: auto;
 }
 
+#root {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 h1,
 h2,
 h3,
