--- a/src/components/page/page.css
+++ b/src/components/page/page.css
@@ -15,10 +15,14 @@ nav a {
     display: inline-block;
 }
 
-nav .logo {
+nav img.logo {
     text-align: center;
     object-fit: contain;
     z-index: 10;
+}
+
+nav i.logo {
+    color: #696969;
 }
 
 nav ::placeholder {
@@ -73,11 +77,12 @@ div.signOut {
     justify-content: center;
     gap: 10px;
     cursor: pointer;
-    color: #4182aa;
+    color: #696969;
     font-size: 0.975rem;
 }
 
-div.signOut:hover {
+div.signOut:hover,
+nav i.logo:hover {
     color: #2d5c79;
 }
 
@@ -95,7 +100,7 @@ span.signOut {
         width: 95vw;
     }
 
-    nav .logo {
+    nav img.logo {
         width: 100px;
     }
 
@@ -118,7 +123,7 @@ span.signOut {
         width: 90vw;
     }
 
-    nav .logo {
+    nav img.logo {
         width: 100px;
     }
 
