--- a/src/views/Home/home.css
+++ b/src/views/Home/home.css
@@ -4,15 +4,15 @@
     }
 }
 
-div.home {
+div.page.home {
     display: flex;
+    justify-content: center;
 }
 
-div.container.sidebar {
-    flex: 2;
-}
-div.container.main {
-    flex: 10;
+div.sidebar.container {
+    min-width: 150px;
+    width: 10vw;
+    padding-left: var(--navPadding);
 }
 
 div.page > div.container {
