--- a/src/components/page/page.css
+++ b/src/components/page/page.css
@@ -36,10 +36,10 @@ div.nav-container {
     gap: 20px;
 }
 
-div.nav-container,
+/* div.nav-container,
 div.page-content {
     max-width: 1800px;
-}
+} */
 
 div.nav-left {
     display: flex;
