--- a/src/views/Home/Main/main.css
+++ b/src/views/Home/Main/main.css
@@ -19,6 +19,8 @@ div.grid-container {
 
 div.card {
     box-shadow: -3px 3px 5px rgba(0, 0, 0, 0.07);
+    display: flex;
+    flex-direction: column;
 }
 
 @media only screen and (max-width: 576px) {
