--- a/src/views/Login/b-login.css
+++ b/src/views/Login/b-login.css
@@ -11,116 +11,125 @@ page = page-center = page-login -->
 */
 
 .page-center {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .page-login .logo {
-    text-align: center;
-    width: 200px;
-    height: 200px;
-    object-fit: contain;
-    z-index: 10;
-    padding: 20px;
+  text-align: center;
+  width: 200px;
+  height: 50px;
+  object-fit: contain;
+  z-index: 10;
+  padding: 20px;
+  cursor: pointer;
 }
 
 .page-login .wrapper-form {
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    align-items: center;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
 }
 
 .page-login form {
-    font-size: 16px;
-    line-height: 150%;
-    border-radius: 4px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 25px;
+  font-size: 16px;
+  line-height: 150%;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
 }
 
 .page-login form h2 {
-    font-weight: 400;
-    text-align: center;
+  font-weight: 400;
+  text-align: center;
 }
 
 .page-login .wrapper-inputs {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .page-login .wrapper-inputs > div {
-    position: relative;
+  position: relative;
 }
 
 .page-login input {
-    box-sizing: border-box;
-    color: #333;
-    border: 1px solid #dedede;
-    border-radius: 4px;
-    font-size: 16px;
-    line-height: normal;
-    box-shadow: inset 1px 1px 3px #0000000d !important;
+  box-sizing: border-box;
+  color: #333;
+  border: 1px solid #dedede;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: normal;
+  box-shadow: inset 1px 1px 3px #0000000d !important;
 }
 
 .page-login label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    pointer-events: none;
-    opacity: 0.5;
-    font-size: 0.9rem;
-    text-transform: capitalize;
-    transform-origin: 0 0;
-    transition: all 0.1s ease-in-out;
-    display: flex;
-    align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  opacity: 0.5;
+  font-size: 0.9rem;
+  text-transform: capitalize;
+  transform-origin: 0 0;
+  transition: all 0.1s ease-in-out;
+  display: flex;
+  align-items: center;
 }
 
 .page-login div.error {
-    font-size: 0.8rem;
-    color: rgb(255, 125, 125);
+  font-size: 0.8rem;
+  color: rgb(255, 125, 125);
+}
+
+.page-login div.loginError {
+  position: absolute;
+  top: -30px;
+  text-transform: capitalize;
+  color: red;
 }
 
 .page-login .submit-button {
-    text-transform: capitalize;
-    color: #fff !important;
-    background-color: #4182aa;
-    border: none;
-    border-radius: 4px;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: normal;
-    cursor: pointer;
+  text-transform: capitalize;
+  color: #fff !important;
+  background-color: #4182aa;
+  border: none;
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: normal;
+  cursor: pointer;
 }
 
 .page-login .submit-button:disabled {
-    background-color: #c6dae5;
-    cursor: default;
+  background-color: #c6dae5;
+  cursor: default;
 }
 
 @media only screen and (max-width: 768px) {
-    .page-login {
-        background-color: #eaeceb;
-    }
+  .page-login {
+    background-color: #eaeceb;
+  }
 }
 
 @media only screen and (min-width: 768px) {
-    .page-login {
-        background-color: #eaeceb;
-    }
+  .page-login {
+    background-color: #eaeceb;
+  }
 
-    .page-login > .logo {
-        align-self: flex-start;
-    }
+  .page-login > .logo {
+    align-self: flex-start;
+  }
 
-    .wrapper-form form {
-        box-shadow: 0 0 4px #0000001a;
-        border-radius: 4px;
-        background-color: #fff;
-    }
+  .wrapper-form form {
+    box-shadow: 0 0 4px #0000001a;
+    border-radius: 4px;
+    background-color: #fff;
+  }
 }
