--- a/src/views/Home/home.css
+++ b/src/views/Home/home.css
@@ -1,29 +1,33 @@
 @media only screen and (max-width: 576px) {
-    div.container.sidebar {
-        display: none;
-    }
+  div.container.sidebar {
+    display: none;
+  }
 
-    div.page.home {
-        justify-content: center;
-    }
+  div.page.home {
+    justify-content: center;
+  }
 }
 
 @media only screen and (min-width: 576px) {
-    div.sidebarOptions {
-        display: none;
-    }
+  div.sidebarOptions {
+    display: none;
+  }
 }
 
 div.page.home {
-    display: flex;
+  display: flex;
+}
+
+div.container.main {
+  flex: 1;
 }
 
 div.sidebar.container {
-    min-width: 150px;
-    width: 10vw;
-    padding-left: var(--navPadding);
+  min-width: 150px;
+  /* width: 10vw; */
+  padding-left: var(--navPadding);
 }
 
 div.page > div.container {
-    padding-top: 2vh;
+  padding-top: 2vh;
 }
