--- a/src/components/page/page.css
+++ b/src/components/page/page.css
@@ -1,161 +1,144 @@
 nav {
-    box-sizing: border-box;
-    position: fixed;
-    width: 100vw;
-    height: 10vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #fafafa;
-    z-index: 1000;
+  box-sizing: border-box;
+  position: fixed;
+  width: 100vw;
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fafafa;
+  z-index: 1000;
 }
 
 .page-content {
-    box-sizing: border-box;
-    height: var(--page-content);
-    margin-top: 10vh;
-    padding: 2vh 0;
+  box-sizing: border-box;
+  height: var(--page-content);
+  margin-top: 10vh;
 }
 
 nav a {
-    display: inline-block;
+  display: inline-block;
 }
 
 nav img.logo {
-    text-align: center;
-    object-fit: contain;
-    z-index: 10;
-    cursor: pointer;
+  text-align: center;
+  object-fit: contain;
+  z-index: 10;
+  cursor: pointer;
 }
 
 nav i.logo {
-    color: var(--navLogo-color);
+  color: var(--navLogo-color);
 }
 
 nav ::placeholder {
-    color: #9e9e9e;
+  color: #9e9e9e;
 }
 
 div.nav-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
 }
 
-/* div.nav-container,
-div.page-content {
-    max-width: 1800px;
-} */
-
 div.nav-left {
-    display: flex;
-    align-items: center;
-    gap: 20px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 
 div.searchBar {
-    position: relative;
+  position: relative;
 }
 
 input.searchBar {
-    box-sizing: border-box;
-    text-overflow: ellipsis;
-    padding: 10px 66px 10px 24px;
-    background-color: #efeff0;
-    border: 1px solid #efeff0;
-    height: 48px;
-    font-size: 0.975rem;
-    color: #000;
-    outline: none;
-    border-radius: 24px;
+  box-sizing: border-box;
+  text-overflow: ellipsis;
+  padding: 10px 66px 10px 24px;
+  background-color: #efeff0;
+  border: 1px solid #efeff0;
+  height: 48px;
+  font-size: 0.975rem;
+  color: #000;
+  outline: none;
+  border-radius: 24px;
 }
 
 button.searchBar {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 5%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 5%;
+}
+
+button.searchBar svg {
+  cursor: pointer;
 }
 
 div.signOut {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    cursor: pointer;
-    color: #696969;
-    font-size: 0.975rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  cursor: pointer;
+  color: #696969;
+  font-size: 0.975rem;
 }
 
 div.signOut:hover,
 nav i.logo:hover {
-    color: #2d5c79;
+  color: #2d5c79;
 }
 
 span.signOut {
-    text-transform: capitalize;
+  text-transform: capitalize;
 }
 
 @media only screen and (max-width: 768px) {
-    nav {
-        gap: 10px;
-    }
+  nav {
+    gap: 10px;
+  }
 
-    div.nav-container {
-        width: 95vw;
-        padding: var(--navPadding) 0;
-    }
+  div.nav-container {
+    width: 95vw;
+    padding: var(--navPadding) 0;
+  }
 
-    nav img.logo {
-        width: 100px;
-    }
+  nav img.logo {
+    width: 100px;
+  }
 
-    input.searchBar {
-        width: 65vw;
-    }
+  input.searchBar {
+    width: 65vw;
+  }
 
-    .page-content {
-        width: 100vw;
-    }
+  .page-content {
+    width: 100vw;
+  }
 }
 
 @media only screen and (min-width: 768px) {
-    nav {
-        gap: 20px;
-    }
+  nav {
+    gap: 20px;
+  }
 
-    div.nav-container {
-        padding: 0 var(--navPadding);
-    }
+  div.nav-container {
+    padding: 0 var(--navPadding);
+  }
 
-    div.nav-container,
-    div.page-content {
-        width: 100vw;
-    }
+  div.nav-container,
+  div.page-content {
+    width: 100vw;
+  }
 
-    nav img.logo {
-        width: 100px;
-    }
+  nav img.logo {
+    width: 100px;
+  }
 
-    input.searchBar {
-        min-width: 450px;
-        max-width: 600px;
-        width: 50vw;
-    }
+  input.searchBar {
+    min-width: 450px;
+    max-width: 600px;
+    width: 50vw;
+  }
 }
-
-/* @media only screen and (min-width: 1024px) {
-    div.nav-container,
-    div.page-content {
-        min-width: 921px;
-        width: 100vw;
-    }
-}
-@media only screen and (min-width: 1280px) {
-    div.nav-container,
-    div.page-content {
-        min-width: 1024px;
-        width: 100vw;
-    }
-} */
