--- a/src/views/Home/Main/main.css
+++ b/src/views/Home/Main/main.css
@@ -1,29 +1,33 @@
 div.content.main {
   display: flex;
   flex-direction: column;
-  gap: 3vw;
+  /* gap: 3vw; */
   box-sizing: border-box;
   height: 100%;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 div.wrapper.cardList {
   display: flex;
   justify-content: center;
-  overflow: auto;
-  padding: 5px;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 20px;
+  flex: 1;
 }
 
 div.grid-container {
   width: fit-content;
   display: grid;
   gap: 30px;
+  flex: 1;
 }
 
 div.card {
   box-shadow: -3px 3px 5px rgba(0, 0, 0, 0.07);
   display: flex;
   flex-direction: column;
+  height: fit-content;
 }
 
 @media only screen and (max-width: 576px) {
