--- a/src/views/Home/home.css
+++ b/src/views/Home/home.css
@@ -19,15 +19,13 @@ div.page.home {
 }
 
 div.container.main {
+  margin: 10px 20px 0;
   flex: 1;
 }
 
 div.sidebar.container {
   min-width: 150px;
-  /* width: 10vw; */
-  padding-left: var(--navPadding);
 }
 
 div.page > div.container {
-  padding-top: 2vh;
 }
