--- a/src/views/Home/Main/main.css
+++ b/src/views/Home/Main/main.css
@@ -38,8 +38,16 @@ div.card {
 
 @media only screen and (min-width: 576px) {
   div.grid-container {
-    grid-template-columns: var(--card-mediumScreen-width) var(
-        --card-mediumScreen-width
+    grid-template-columns: var(--card-576mediumScreen-width) var(
+        --card-576mediumScreen-width
+      );
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  div.grid-container {
+    grid-template-columns: var(--card-768mediumScreen-width) var(
+        --card-768mediumScreen-width
       );
   }
 }
