--- a/src/views/Home/Main/components/Card/card.css
+++ b/src/views/Home/Main/components/Card/card.css
@@ -5,7 +5,7 @@
 
 .card img.imgCard {
     width: 100%;
-    height: 220px;
+    /* height: 220px; */
     object-fit: cover;
 }
 
@@ -85,6 +85,7 @@ div.badge span.free {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    text-align: center;
 }
 
 .card span.desc {
@@ -105,4 +106,28 @@ div.badge span.free {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media only screen and (max-width: 576px) {
+    .card img.imgCard {
+        height: var(--card-smallScreen-width);
+    }
+}
+
+@media only screen and (min-width: 576px) {
+    .card img.imgCard {
+        height: var(--card-576mediumScreen-width);
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .card img.imgCard {
+        height: var(--card-768mediumScreen-width);
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    .card img.imgCard {
+        height: var(--card-largeScreen-width);
+    }
 }
