--- a/src/views/Home/home.css
+++ b/src/views/Home/home.css
@@ -1,31 +1,39 @@
-@media only screen and (max-width: 576px) {
-  div.container.sidebar {
-    display: none;
-  }
+@media only screen and (max-width: 767px) {
+    div.container.sidebar {
+        display: none;
+    }
 
-  div.page.home {
-    justify-content: center;
-  }
+    div.page.home {
+        justify-content: center;
+    }
+
+    div.container.main {
+        margin: 10px 20px 0 20px;
+    }
 }
 
-@media only screen and (min-width: 576px) {
-  div.sidebarOptions {
-    display: none;
-  }
+@media only screen and (min-width: 767px) {
+    div.sidebarOptions {
+        display: none;
+    }
+
+    div.container.main {
+        margin: 10px 20px 0 calc(var(--width-Sidebar) + 20px);
+    }
 }
 
 div.page.home {
-  display: flex;
+    display: flex;
 }
 
 div.container.main {
-  margin: 10px 20px 0;
-  flex: 1;
+    box-sizing: border-box;
+    flex: 1;
 }
 
 div.sidebar.container {
-  min-width: 150px;
-}
-
-div.page > div.container {
+    width: var(--width-Sidebar);
+    height: 90vh;
+    position: fixed;
+    overflow: auto;
 }
